Fixed overflow on reviews when viewed on narrow screen

--- a/css/reviews.css
+++ b/css/reviews.css
@@ -16,7 +16,6 @@ restaurant-review {
     position: relative;
     width: auto;
     height: auto;
-    max-height: 25rem;
     margin: 1em;
     background-color: #8e181b;
     border: 1px solid #8e181b;
